# WlxOverlay

./: .gitignore  AppRun.desktop  Extensions.cs  Program.cs  README.md  WlxOverlay.csproj  WlxOverlay.sln  X11Overlay.csproj  X11Overlay.sln  actions.json  actions_binding_knuckles.json  actions_binding_oculus.json  actions_binding_vive.json  libopenvr_api.LICENSE  manifest.vrmanifest  prebuild.sh  props.txt
Backend/: IOverlay.cs  IXrBackend.cs  IXrInput.cs  TrackedDevice.cs  XrBackend.cs
Capture/: IDesktopCapture.cs  PipeWireCapture.cs  WlrCapture.cs  XshmCapture.cs
Core/: AudioManager.cs  ChaperoneManager.cs  Extensions.cs  InputManager.cs  MainLoop.cs  ManifestInstaller.cs  NotificationsManager.cs  OverlayManager.cs  OverlayRegistry.cs  PlaySpaceManager.cs  TaskScheduler.cs
Data/: NvidiaSMI.cs
Desktop/: BaseOutput.cs  Desktop.DBus.cs  EGL.cs  IKeyboardProvider.cs  UInput.cs
Extras/: ChaperoneManager.cs  NotificationsManager.cs  PlaySpaceMover.cs  PttHandler.cs
GFX/: EGL.cs  Font.cs  FontCollection.cs  GraphicsFormat.cs  HexColor.cs  IGraphicsEngine.cs  IRenderer.cs  ITexture.cs  IUiRenderer.cs
GUI/: BatteryIndicator.cs  Button.cs  ButtonBase.cs  Canvas.cs  ContentPager.cs  Control.cs  DateTimeLabel.cs  Image.cs  KeyButton.cs  Label.cs  LabelCentered.cs  Panel.cs
Input/: IKeyboardProvider.cs  IMouseProvider.cs  InputProvider.cs  KeyboardLayout.cs  VirtualKey.cs
Numerics/: Basis.cs  MathF.cs  Quaternion.cs  Rect2.cs  (+5 more)
lib/wlxpw/: CMakeLists.txt  helpers.c  helpers.h  library.c
lib/wlxshm/: .gitignore  CMakeLists.txt  library.c  xhelpers.c  xhelpers.h
(+165 files in other folders)
